<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.genji.am002_intent.ActivityTwo">

    <TextView
        android:text="@string/primaDomanda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rgroup">

        <RadioButton
            android:text="@string/vero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/rb1"
            android:checked="false"
            android:layout_below="@+id/textView3"
            android:layout_alignRight="@+id/radioButton3"
            android:layout_alignEnd="@+id/radioButton3"
            android:layout_weight="1"
            android:onClick="rbclick"/>

        <RadioButton
            android:text="@string/falso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb2"
            android:checked="false"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:onClick="rbclick"/>
    </RadioGroup>

    <TextView
        android:text="@string/secondaDomanda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rgroup"
        android:layout_below="@+id/textView4">

        <RadioButton
            android:text="@string/vero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb3"
            android:layout_weight="1"
            android:onClick="rbclick"/>

        <RadioButton
            android:text="@string/falso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb4"
            android:layout_weight="1"
            android:onClick="rbclick"/>
    </RadioGroup>

    <TextView
        android:text="@string/terzaDomanda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginBottom="200sp"
        android:layout_above="@+id/finish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primaSchermata"
        android:id="@+id/finish"
        android:layout_marginBottom="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp" />

    <Button
        android:text="@string/correggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/correggi"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_alignBaseline="@+id/finish"
        android:layout_alignBottom="@+id/finish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/rgroup"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:text="@string/vero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb5"
            android:layout_weight="1"
            android:onClick="rbclick"/>

        <RadioButton
            android:text="@string/falso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb6"
            android:layout_weight="1"
            android:onClick="rbclick"/>
    </RadioGroup>

</RelativeLayout>

